syntax = "proto3";
package raid_fs;

enum Error {
  ERROR_UNSPECIFIED = 0;
  ERROR_OUT_OF_RANGE = 1;
}
